updated account page

--- a/app/views/pages/account.html.erb
+++ b/app/views/pages/account.html.erb
@@ -35,8 +35,24 @@
 			<td>Every 4 Weeks</td>
 		</tr>
 		<tr>
+			<td>Number of Bathrooms:</td>
+			<td>2</td>
+		</tr>
+		<tr>
+			<td>Number of Bedrooms:</td>
+			<td>2</td>
+		</tr>
+		<tr>
 			<td>Price Per Clean:</td>
 			<td>$208.00</td>
+		</tr>
+		<tr>
+			<td>Tip Per Clean:</td>
+			<td>$8.00</td>
+		</tr>
+		<tr>
+			<td>Total:</td>
+			<td>$216.00</td>
 		</tr>
 	</tbody>
 </table>
