added profile pages for clenaers

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -19,6 +19,7 @@
             <div class="navbar-form pull-right">
             <ul class="nav pull-right">
                     <li><%= link_to "My Account", "account" %></li>
+                    <li><%= link_to "Cleaner Profiles", "cleaner_home" %>
 
             </ul>
             </div>
