--- a/app/views/cleaner_profile/index.html.erb
+++ b/app/views/cleaner_profile/index.html.erb
@@ -5,19 +5,53 @@
 		<table class="table table-bordered">
 			<tbody>
 				<tr>
+					<td>1</td>
 					<td><%= link_to 'Spotless Cleaning Services', scs_path %></td>
 					<td><span class="label label-warning">Incomplete</span></td>
 				</tr>
 				<tr>
+					<td>2</td>
 					<td><%= link_to 'Sparkle Cleaning Services', sparklingcs_path %></td>
 					<td><span class="label label-warning">Incomplete</span></td>
 				</tr>
 				<tr>
+					<td>3</td>
 					<td><%= link_to 'Real Touch Maids', realtouchmaids_path %></td>
 					<td><span class="label label-warning">Incomplete</span></td>
 				</tr>
 				<tr>
+					<td>4</td>
 					<td><%= link_to 'First Green Clean', firstgreenclean_path %></td>
+					<td><span class="label label-warning">Incomplete</span></td>
+				</tr>
+				<tr>
+					<td>5</td>
+					<td><%= link_to 'None', firstgreenclean_path %></td>
+					<td><span class="label label-warning">Incomplete</span></td>
+				</tr>
+				<tr>
+					<td>6</td>
+					<td><%= link_to 'None', firstgreenclean_path %></td>
+					<td><span class="label label-warning">Incomplete</span></td>
+				</tr>
+				<tr>
+					<td>7</td>
+					<td><%= link_to 'None', firstgreenclean_path %></td>
+					<td><span class="label label-warning">Incomplete</span></td>
+				</tr>
+				<tr>
+					<td>8</td>
+					<td><%= link_to 'None', firstgreenclean_path %></td>
+					<td><span class="label label-warning">Incomplete</span></td>
+				</tr>
+				<tr>
+					<td>9</td>
+					<td><%= link_to 'None', firstgreenclean_path %></td>
+					<td><span class="label label-warning">Incomplete</span></td>
+				</tr>
+				<tr>
+					<td>10</td>
+					<td><%= link_to 'None', firstgreenclean_path %></td>
 					<td><span class="label label-warning">Incomplete</span></td>
 				</tr>
 			</tbody>
