--- a/app/views/cleaner_profile/realtouchmaids.html.erb
+++ b/app/views/cleaner_profile/realtouchmaids.html.erb
@@ -1,7 +1,68 @@
-<div class="container">
+<!-- ScrubBud Score Criteria -->
 
-<h2>Real Touch Maids</h2>
+<!-- Begin Score Overview -->
+<div class="reviews-score">
+	<div class="scrubbud-score">
+		<div class="name">ScrubBud</div>
+		<div class="star five">star</div>
+		<div class="reviews-number">
+			<div class="number">11</div>
+			<div class="text-number">Reviews</div>
+		</div>
+	</div>	
+	<div class="yelp-score">
+		<div class="name">Yelp</div>
+		<div class="star five">star</div>
+		<div class="reviews-number">
+			<div class="number">26</div>
+			<div class="text-number">Reviews</div>
+		</div>		
+	</div>	
+	<div class="number-score">
+		<div class="number">98</div>
+		<div class="text-score">ScrubBud Score</div>
+		<span class="help">What the ScrubBud Score?</span>
+	</div>
+</div>
+<!-- End Score Overview -->
 
+<!-- Begin ScrubBud Score -->
+<div class="score-scrubbud score-criterias">
+	<div class="number-score">
+		<div class="number">NA</div>
+		<div class="text-score">ScrubBud Score</div>
+		<span class="help">What the ScrubBud Score?</span>
+	</div>
+	<div class="scores-criteria">
+		<div class="criteria punctual">
+			<div class="name">Punctual</div>
+			<div class="star five">star</div>
+		</div>
+		<div class="criteria friendly">
+			<div class="name">Friendly and Courteous</div>
+			<div class="star five">star</div>
+		</div>
+		<div class="criteria comunication">
+			<div class="name">Comunication</div>
+			<div class="star five">star</div>
+		</div>
+		<div class="criteria quality">
+			<div class="name">Quality of service</div>
+			<div class="star five">star</div>
+		</div>
+		<div class="criteria value">
+			<div class="name">Value</div>
+			<div class="star five">star</div>
+		</div>						
+		<div class="criteria recommend">
+			<div class="name">I would recommend to friend</div>
+			<div class="star five">star</div>
+		</div>																
+	</div>		
+</div>
+<!-- End ScrubBud Score -->
+
+<!-- Start Profile -->
 <h3>About Us</h3>
 <p>All of our team members are trained to deliver the most outstanding cleaning service experience ever. As for our technical knowledge, we are second to none.</p>
 
@@ -84,4 +145,4 @@
 </table>
 </div>
 
-</div>
+
