--- a/app/views/cleaner_profile/sparklingcleaningservices.html.erb
+++ b/app/views/cleaner_profile/sparklingcleaningservices.html.erb
@@ -1,7 +1,68 @@
-<div class="container">
+<!-- ScrubBud Score Criteria -->
 
-<h2>Sparkle Cleaning Services</h2>
+<!-- Begin Score Overview -->
+<div class="reviews-score">
+	<div class="scrubbud-score">
+		<div class="name">ScrubBud</div>
+		<div class="star five">star</div>
+		<div class="reviews-number">
+			<div class="number">11</div>
+			<div class="text-number">Reviews</div>
+		</div>
+	</div>	
+	<div class="yelp-score">
+		<div class="name">Yelp</div>
+		<div class="star five">star</div>
+		<div class="reviews-number">
+			<div class="number">26</div>
+			<div class="text-number">Reviews</div>
+		</div>		
+	</div>	
+	<div class="number-score">
+		<div class="number">98</div>
+		<div class="text-score">ScrubBud Score</div>
+		<span class="help">What the ScrubBud Score?</span>
+	</div>
+</div>
+<!-- End Score Overview -->
 
+<!-- Begin ScrubBud Score -->
+<div class="score-scrubbud score-criterias">
+	<div class="number-score">
+		<div class="number">NA</div>
+		<div class="text-score">ScrubBud Score</div>
+		<span class="help">What the ScrubBud Score?</span>
+	</div>
+	<div class="scores-criteria">
+		<div class="criteria punctual">
+			<div class="name">Punctual</div>
+			<div class="star five">star</div>
+		</div>
+		<div class="criteria friendly">
+			<div class="name">Friendly and Courteous</div>
+			<div class="star five">star</div>
+		</div>
+		<div class="criteria comunication">
+			<div class="name">Comunication</div>
+			<div class="star five">star</div>
+		</div>
+		<div class="criteria quality">
+			<div class="name">Quality of service</div>
+			<div class="star five">star</div>
+		</div>
+		<div class="criteria value">
+			<div class="name">Value</div>
+			<div class="star five">star</div>
+		</div>						
+		<div class="criteria recommend">
+			<div class="name">I would recommend to friend</div>
+			<div class="star five">star</div>
+		</div>																
+	</div>		
+</div>
+<!-- End ScrubBud Score -->
+
+<!-- Start Profile -->
 <h3>About Us</h3>
 <p>Sparkle Cleaning Services is a privately women-run and owned company dedicated to providing quality cleaning services to our clients in the DC, Maryland and Virginia areas. Sparkle Cleaning Services brings you more than 15 years of experience in residential cleaning. We focus on our customers well-being distinguishing us from others in the industry. For a job well done, competitive prices​ and a proactive approach which identifies issues and corrects them before they interfere with the daily operations of our clients pick us. Sparkle Cleaning Services understands that quality is more than just providing services.</p>
 
@@ -29,6 +90,7 @@
 		<tr>
 			<td>Certifications</td>
 			<td>?</td>
+		</tr>
 	</tbody>
 </table>
 </div>
@@ -59,4 +121,3 @@
 </table>
 </div>
 
-</div>
