--- a/app/views/cleaner_profile/spotlesscleaningservices.html.erb
+++ b/app/views/cleaner_profile/spotlesscleaningservices.html.erb
@@ -63,9 +63,6 @@
 <!-- End ScrubBud Score -->
 
 <!-- Start Profile -->
-
-<h2>Spotless Cleaning Service</h2>
-
 <h3>About Us</h3>
 <p>Spotless Cleaning Services has being in business for more than 3 years and it prides itself in providing excellent cleaning services as well as customer services in the metropolitan area.</p>
 
@@ -89,6 +86,10 @@
 		<tr>
 			<td>Legal Structure</td>
 			<td>Sole Proprietorship</td>
+		</tr>
+		<tr>
+			<td>Certifications</td>
+			<td>?</td>
 		</tr>
 	</tbody>
 </table>
