--- a/app/views/cleaner_profile/cleanrus.html.erb
+++ b/app/views/cleaner_profile/cleanrus.html.erb
@@ -64,7 +64,9 @@
 
 <!-- Start Profile -->
 <h3>About Us</h3>
-<p>Sparkle Cleaning Services is a privately women-run and owned company dedicated to providing quality cleaning services to our clients in the DC, Maryland and Virginia areas. Sparkle Cleaning Services brings you more than 15 years of experience in residential cleaning. We focus on our customers well-being distinguishing us from others in the industry. For a job well done, competitive prices​ and a proactive approach which identifies issues and corrects them before they interfere with the daily operations of our clients pick us. Sparkle Cleaning Services understands that quality is more than just providing services.</p>
+<p>We provide affordable cleaning. Just the way you want it. Let us do your house cleaning, carpet cleaning, and concierge for you so you can have more time to spend on you and your family. 
+We're here to create magic where you can relax and set a date for good old fashion cleaning. We use products safe for your family and pets!!</p>
+
 
 <div class="span12">
 <h3>Quick Facts</h3>
@@ -72,24 +74,24 @@
 <table class="table span6">
 	<tbody>
 		<tr>
-			<td>Years in Business</td>
-			<td>15</td>
+			<td>Years in Busiess</td>
+			<td>2</td>
 		</tr>
 		<tr>
 			<td>Team Size</td>
-			<td>?</td>
+			<td>1</td>
 		</tr>
 		<tr>
 			<td>Franchise/Locally Owned/Independent</td>
-			<td>Locally Owned</td>
+			<td></td>
 		</tr>
 		<tr>
 			<td>Legal Structure</td>
-			<td>Limited Liablity Company</td>
+			<td>Limited Liability Company</td>
 		</tr>
 		<tr>
 			<td>Certifications</td>
-			<td>?</td>
+			<td>Bonded, Licensed and Insured</td>
 		</tr>
 	</tbody>
 </table>
@@ -112,9 +114,9 @@
 		<tr>
 			<td><img src="#"></td>
 			<td>Owner</td>
-			<td>Maria Sanchez</td>
-			<td></td>
-			<td></td>
+			<td>Tony Bussie</td>
+			<td>2</td>
+			<td>Me</td>
 		</tr>
 	</tbody>
 
