--- a/app/views/cleaner_profile/firstgreenclean.html.erb
+++ b/app/views/cleaner_profile/firstgreenclean.html.erb
@@ -74,7 +74,7 @@
 <table class="table span6">
 	<tbody>
 		<tr>
-			<td>Years in Busiess</td>
+			<td>Years in Business</td>
 			<td>8</td>
 		</tr>
 		<tr>
