--- a/app/views/cleaner_profile/index.html.erb
+++ b/app/views/cleaner_profile/index.html.erb
@@ -26,12 +26,12 @@
 				</tr>
 				<tr>
 					<td>5</td>
-					<td><%= link_to 'None', firstgreenclean_path %></td>
+					<td><%= link_to 'Clean R Us', cleanrus_path %></td>
 					<td><span class="label label-warning">Incomplete</span></td>
 				</tr>
 				<tr>
 					<td>6</td>
-					<td><%= link_to 'None', firstgreenclean_path %></td>
+					<td><%= link_to 'Skilled Maids', skilledmaids_path %></td>
 					<td><span class="label label-warning">Incomplete</span></td>
 				</tr>
 				<tr>
