--- a/app/views/cleaner_profile/realtouchmaids.html.erb
+++ b/app/views/cleaner_profile/realtouchmaids.html.erb
@@ -76,7 +76,7 @@
 <table class="table span6">
 	<tbody>
 		<tr>
-			<td>Years in Busiess</td>
+			<td>Years in Business</td>
 			<td>12</td>
 		</tr>
 		<tr>
