--- a/app/views/cleaner_profile/skilledmaids.html.erb
+++ b/app/views/cleaner_profile/skilledmaids.html.erb
@@ -64,7 +64,19 @@
 
 <!-- Start Profile -->
 <h3>About Us</h3>
-<p>Sparkle Cleaning Services is a privately women-run and owned company dedicated to providing quality cleaning services to our clients in the DC, Maryland and Virginia areas. Sparkle Cleaning Services brings you more than 15 years of experience in residential cleaning. We focus on our customers well-being distinguishing us from others in the industry. For a job well done, competitive prices​ and a proactive approach which identifies issues and corrects them before they interfere with the daily operations of our clients pick us. Sparkle Cleaning Services understands that quality is more than just providing services.</p>
+<p>Skilled Maids is your choice for quality and affordable house and office cleaning. We are focused on providing high quality service and our goal is 100% customer satisfaction. We will do everything we can to meet your exceptions.</p>
+
+<p>Our company is based on the belief that our customers needs are of the utmost importance. Our entire team is committed to meeting those needs. As a result, a high percentage of our business is from repeat customers and referrals.</p>
+
+<p>We would welcome the opportunity to earn your trust and deliver you the vest service.</p>
+
+<p>Skilled Maids was founded with the principle the cleaning your home should be done the way you would do it. If you had the time. So, our system was designed to go beyond surface sparkle to provide a healthier and cleaner clean.</p>
+
+<p>Our clients have the peace of mind that comes from knowing they can trust us not only as a house cleaning services, but to treat their homes with honor and respect.</p>
+
+<p>We offer competitive rates for all types of cleaning. Become a part of our growing family of clients. Call us and enjoy your next day off.</p>
+
+<p>We are fully insured. We offer daily, weekly, bi-monthly, monthly as well as one time cleaning services. We use our own equipment and bring our cleaning supplies.</p>
 
 <div class="span12">
 <h3>Quick Facts</h3>
@@ -73,23 +85,23 @@
 	<tbody>
 		<tr>
 			<td>Years in Business</td>
-			<td>15</td>
+			<td>8</td>
 		</tr>
 		<tr>
 			<td>Team Size</td>
-			<td>?</td>
+			<td></td>
 		</tr>
 		<tr>
 			<td>Franchise/Locally Owned/Independent</td>
-			<td>Locally Owned</td>
+			<td></td>
 		</tr>
 		<tr>
 			<td>Legal Structure</td>
-			<td>Limited Liablity Company</td>
+			<td></td>
 		</tr>
 		<tr>
 			<td>Certifications</td>
-			<td>?</td>
+			<td>Bonded, Licensed & Insured</td>
 		</tr>
 	</tbody>
 </table>
@@ -112,9 +124,9 @@
 		<tr>
 			<td><img src="#"></td>
 			<td>Owner</td>
-			<td>Maria Sanchez</td>
+			<td>Lilliane </td>
 			<td></td>
-			<td></td>
+			<td>Me</td>
 		</tr>
 	</tbody>
 
