--- a/app/views/cleaner_profile/spotlesscleaningservices.html.erb
+++ b/app/views/cleaner_profile/spotlesscleaningservices.html.erb
@@ -72,7 +72,7 @@
 <table class="table span6">
 	<tbody>
 		<tr>
-			<td>Years in Busiess</td>
+			<td>Years in Business</td>
 			<td>5</td>
 		</tr>
 		<tr>
