--- a/app/views/cleaner_profile/cleanrus.html.erb
+++ b/app/views/cleaner_profile/cleanrus.html.erb
@@ -74,7 +74,7 @@ We're here to create magic where you can relax and set a date for good old fashi
 <table class="table span6">
 	<tbody>
 		<tr>
-			<td>Years in Busiess</td>
+			<td>Years in Business</td>
 			<td>2</td>
 		</tr>
 		<tr>
