--- a/app/views/cleaner_profile/sparklingcleaningservices.html.erb
+++ b/app/views/cleaner_profile/sparklingcleaningservices.html.erb
@@ -73,7 +73,7 @@
 	<tbody>
 		<tr>
 			<td>Years in Business</td>
-			<td>15</td>
+			<td>20+</td>
 		</tr>
 		<tr>
 			<td>Team Size</td>
@@ -116,8 +116,35 @@
 			<td></td>
 			<td></td>
 		</tr>
+		<tr>
+			<td><img src="#"></td>
+			<td>Team Member</td>
+			<td>Luisa Flores</td>
+			<td>15+</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><img src="#"></td>
+			<td>Owner</td>
+			<td>Jaquelin Landaverde</td>
+			<td>10+</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><img src="#"></td>
+			<td>Owner</td>
+			<td>Iris Chacon</td>
+			<td>10+</td>
+			<td></td>
+		</tr>
+		<tr>
+			<td><img src="#"></td>
+			<td>Owner</td>
+			<td>Sandra Nolasco</td>
+			<td>15+</td>
+			<td></td>
+		</tr>
 	</tbody>
-
 </table>
 </div>
 
