--- a/app/views/pages/faqs.html.erb
+++ b/app/views/pages/faqs.html.erb
@@ -1,2 +1,22 @@
-<h1>Pages#faqs</h1>
-<p>Find me in app/views/pages/faqs.html.erb</p>
+<h2>Frequently Asked Questions</h2>
+
+<h3>How do I pay for my clean?</h3>
+
+<p>Once your clean has been completed you will receive an invoice with the amount due. ScrubBud accepts all major credit cards. If you are scheduled to receive a recurring clean you will be billed on the last day of each month for the cleans that were performed during that month.</p>
+
+
+<h3>What happens after I submit my order?</h3>
+<p>Once you submit your order you will receive an email with details of the clean. Within 24 hours you will then receive a call from your cleaner to confirm your appointment.</p>
+
+<h3>What if I am not satisfied with the job the cleaners did?</h3>
+<p>If you are not satisfied with your clean please let us know within 24 hours and we'd be happy to send the crew back out. In some instances, we do offer refunds but this is handled on a case by case basis.</p>
+
+<h3>You guys did an awesome job and I&#39;d like you to come on a regular basis, how do I re-order?</h3>
+<p>Easy, just <a href="reorder.html">click here</a> and we'll get you set up.</p>
+
+
+<h3>I want a recurring clean but I would like to try the service out first, how can I do this?</h3>
+<p>During the ordering process select the 'not sure' option. If you're happy with the service just click the 're-order' link in the follow up email or <a href="reorder.html">click here</a> to order another clean.</p>
+
+<h3>What is your cancellation policy?</h3>
+<p>If you are not happy with your service you are free to cancel at any time without penalty. We ask that you cancel at least 24 hours in advance so we can provide adequate notice to our cleaners. You are responsible for the full payment of any cleans which have been performed.</p>
