--- a/app/views/cleaner_profile/roundabout.html.erb
+++ b/app/views/cleaner_profile/roundabout.html.erb
@@ -62,6 +62,261 @@
 </div>
 <!-- End ScrubBud Score -->
 
+<!-- Review Start -->
+
+<!-- Beg of Review -->
+<div class="reviews-commets">
+   <div class="score-bodys">
+      <div class="scores-body">
+         <div class="body punctual"><img src="/sites/all/themes/scrubbud/images/five.png" /></div>
+      </div>
+   </div>
+   <!-- Overview Ratings -->
+   <div class="header-review-commets">
+      <div class="title">Dana K</div>
+   </div>
+   <!-- Specific Ratings -->
+   <div class="info user" style="margin-left:12px;">Aug 28, 2013</div>
+   <!--<div class="info puctual">
+      <span class="name">Punctual</span> <span class="star">star</span>
+      </div>
+      <div class="info quality-of-service">
+      <span class="name">Quality of Service</span> <span class="star">star</span>
+      </div>
+      <div class="info friendly-and-courteous">
+      <span class="name">Friendly and Courteous</span> <span class="star">star</span>
+      </div>
+      <div class="info value">
+      <span class="name">value communications</span> <span class="star">star</span>
+      </div> 
+      <div class="info friend">
+      <span class="name">I would recommend to a friend</span> <span class="star">star</span>
+      </div>  --><!-- Comments -->
+   <div class="menssage">
+      <p>Happy customer since 2006!!</p>
+		<p>I've been with Jaki since 2006 and love their service. I use them once a month and couldn't be any happier. I wish they offered weekends still, but I will change my schedule during the week just to keep them.</p>
+   </div>
+</div>
+<!-- End of Review -->
+
+<!-- Beg of Review -->
+<div class="reviews-commets">
+   <div class="score-bodys">
+      <div class="scores-body">
+         <div class="body punctual"><img src="/sites/all/themes/scrubbud/images/four.png" /></div>
+      </div>
+   </div>
+   <!-- Overview Ratings -->
+   <div class="header-review-commets">
+      <div class="title">Heidi G</div>
+   </div>
+   <!-- Specific Ratings -->
+   <div class="info user" style="margin-left:12px;">May 20, 2013</div>
+   <!--<div class="info puctual">
+      <span class="name">Punctual</span> <span class="star">star</span>
+      </div>
+      <div class="info quality-of-service">
+      <span class="name">Quality of Service</span> <span class="star">star</span>
+      </div>
+      <div class="info friendly-and-courteous">
+      <span class="name">Friendly and Courteous</span> <span class="star">star</span>
+      </div>
+      <div class="info value">
+      <span class="name">value communications</span> <span class="star">star</span>
+      </div> 
+      <div class="info friend">
+      <span class="name">I would recommend to a friend</span> <span class="star">star</span>
+      </div>  --><!-- Comments -->
+   <div class="menssage">
+      <p>They're great!</p>
+<p>We love Donna, Gloria and Jaki and think they're great! The team is really thorough and the house always smells wonderful when they're done.</p>
+   </div>
+</div>
+<!-- End of Review -->
+
+
+<!-- Beg of Review -->
+<div class="reviews-commets">
+   <div class="score-bodys">
+      <div class="scores-body">
+         <div class="body punctual"><img src="/sites/all/themes/scrubbud/images/two.png" /></div>
+      </div>
+   </div>
+   <!-- Overview Ratings -->
+   <div class="header-review-commets">
+      <div class="title">Felicia S</div>
+   </div>
+   <!-- Specific Ratings -->
+   <div class="info user" style="margin-left:12px;">Mar 6, 2013</div>
+   <!--<div class="info puctual">
+      <span class="name">Punctual</span> <span class="star">star</span>
+      </div>
+      <div class="info quality-of-service">
+      <span class="name">Quality of Service</span> <span class="star">star</span>
+      </div>
+      <div class="info friendly-and-courteous">
+      <span class="name">Friendly and Courteous</span> <span class="star">star</span>
+      </div>
+      <div class="info value">
+      <span class="name">value communications</span> <span class="star">star</span>
+      </div> 
+      <div class="info friend">
+      <span class="name">I would recommend to a friend</span> <span class="star">star</span>
+      </div>  --><!-- Comments -->
+   <div class="menssage">
+      <p>Disappointed with the service - this time</p>
+<p>I have previously used your service 2 times and was pleased. This time it lacked quality and value. My appointment was for 1pm. A team of two arrived at 2:30pm, and a 3rd person arrived some time later. When they left at 6:30pm, my bathroom floors were dirty, areas of the hardwood floors had not been swept, and the staircase had areas not dusted. It was late when they left, and thus I did not ask them to redo anything. The service provided lacked quality and attention to detail.</p>
+   </div>
+</div>
+<!-- End of Review -->
+
+
+<!-- Beg of Review -->
+<div class="reviews-commets">
+   <div class="score-bodys">
+      <div class="scores-body">
+         <div class="body punctual"><img src="/sites/all/themes/scrubbud/images/five.png" /></div>
+      </div>
+   </div>
+   <!-- Overview Ratings -->
+   <div class="header-review-commets">
+      <div class="title">Veronica E</div>
+   </div>
+   <!-- Specific Ratings -->
+   <div class="info user" style="margin-left:12px;">Sep 15, 2012</div>
+   <!--<div class="info puctual">
+      <span class="name">Punctual</span> <span class="star">star</span>
+      </div>
+      <div class="info quality-of-service">
+      <span class="name">Quality of Service</span> <span class="star">star</span>
+      </div>
+      <div class="info friendly-and-courteous">
+      <span class="name">Friendly and Courteous</span> <span class="star">star</span>
+      </div>
+      <div class="info value">
+      <span class="name">value communications</span> <span class="star">star</span>
+      </div> 
+      <div class="info friend">
+      <span class="name">I would recommend to a friend</span> <span class="star">star</span>
+      </div>  --><!-- Comments -->
+   <div class="menssage">
+      <p>GREAT SERVICE</p>
+<p>They cleaned areas previous cleaning companies never touched. They are very efficient and usually thorough. The green cleaning is especially good due to allergies. I inspect prior to their leaving and very seldom are things overlooked on their part. If something is overlooked, I simply ask and they are more than accomodating to clean it. Overall, a great cleaning service. I have paid more and gotton less.</p>
+   </div>
+</div>
+<!-- End of Review -->
+
+
+<!-- Beg of Review -->
+<div class="reviews-commets">
+   <div class="score-bodys">
+      <div class="scores-body">
+         <div class="body punctual"><img src="/sites/all/themes/scrubbud/images/three.png" /></div>
+      </div>
+   </div>
+   <!-- Overview Ratings -->
+   <div class="header-review-commets">
+      <div class="title">Kelsey Costello</div>
+   </div>
+   <!-- Specific Ratings -->
+   <div class="info user" style="margin-left:12px;">Sep 11, 2012</div>
+   <!--<div class="info puctual">
+      <span class="name">Punctual</span> <span class="star">star</span>
+      </div>
+      <div class="info quality-of-service">
+      <span class="name">Quality of Service</span> <span class="star">star</span>
+      </div>
+      <div class="info friendly-and-courteous">
+      <span class="name">Friendly and Courteous</span> <span class="star">star</span>
+      </div>
+      <div class="info value">
+      <span class="name">value communications</span> <span class="star">star</span>
+      </div> 
+      <div class="info friend">
+      <span class="name">I would recommend to a friend</span> <span class="star">star</span>
+      </div>  --><!-- Comments -->
+   <div class="menssage">
+      <p>Not wowed</p>
+<p>To be honest I was not wowed and my expectations were barely met. While some areas were super clean like my steps, other areas were potentially not cleaned at all. I had cobwebs between my TV stand and the fire place, and the floor in my kitchen, cabinets and fridge were still really dirty. If I had paid half of what I paid, this would be fine, but at the price point I expected more.</p>
+   </div>
+</div>
+<!-- End of Review -->
+
+<!-- Beg of Review -->
+<div class="reviews-commets">
+   <div class="score-bodys">
+      <div class="scores-body">
+         <div class="body punctual"><img src="/sites/all/themes/scrubbud/images/five.png" /></div>
+      </div>
+   </div>
+   <!-- Overview Ratings -->
+   <div class="header-review-commets">
+      <div class="title">DC Resident</div>
+   </div>
+   <!-- Specific Ratings -->
+   <div class="info user" style="margin-left:12px;">Sep 9, 2012</div>
+   <!--<div class="info puctual">
+      <span class="name">Punctual</span> <span class="star">star</span>
+      </div>
+      <div class="info quality-of-service">
+      <span class="name">Quality of Service</span> <span class="star">star</span>
+      </div>
+      <div class="info friendly-and-courteous">
+      <span class="name">Friendly and Courteous</span> <span class="star">star</span>
+      </div>
+      <div class="info value">
+      <span class="name">value communications</span> <span class="star">star</span>
+      </div> 
+      <div class="info friend">
+      <span class="name">I would recommend to a friend</span> <span class="star">star</span>
+      </div>  --><!-- Comments -->
+   <div class="menssage">
+      <p>Awesome</p>
+<p>We required a top to bottom cleaning and received just that! The attention to detail resulted in a top notch cleaning job. My husband is very particular and he was impressed by the services Round About Cleaning Services, Inc provided!!</p>
+   </div>
+</div>
+<!-- End of Review -->
+
+<!-- Beg of Review -->
+<div class="reviews-commets">
+   <div class="score-bodys">
+      <div class="scores-body">
+         <div class="body punctual"><img src="/sites/all/themes/scrubbud/images/four.png" /></div>
+      </div>
+   </div>
+   <!-- Overview Ratings -->
+   <div class="header-review-commets">
+      <div class="title">Sonya B</div>
+   </div>
+   <!-- Specific Ratings -->
+   <div class="info user" style="margin-left:12px;">Aug 5, 2012</div>
+   <!--<div class="info puctual">
+      <span class="name">Punctual</span> <span class="star">star</span>
+      </div>
+      <div class="info quality-of-service">
+      <span class="name">Quality of Service</span> <span class="star">star</span>
+      </div>
+      <div class="info friendly-and-courteous">
+      <span class="name">Friendly and Courteous</span> <span class="star">star</span>
+      </div>
+      <div class="info value">
+      <span class="name">value communications</span> <span class="star">star</span>
+      </div> 
+      <div class="info friend">
+      <span class="name">I would recommend to a friend</span> <span class="star">star</span>
+      </div>  --><!-- Comments -->
+   <div class="menssage">
+      <p>Great Job!</p>
+<p>We have two dogs that shed big time. The women who came to our house were great. They were very nice with a great attitude. They did a good job of tackling all of the fur that seems to still be on the floor after I sweep. They cleaned things that I didn't notice before so that when I came into the room it looked brand new. And the ceiling fan! I don't know what to say... Thank you.</p>
+   </div>
+</div>
+<!-- End of Review -->
+
+
+<!-- Reviews End -->
+
+
+
 <!-- Start Profile -->
 <h3>About Us</h3>
 <p>To meet our clients ever changing cleaning needs, while continuing to offer the best service possible for affordable prices while building strong relationships because every client is unique.</p>
@@ -86,7 +341,7 @@
 			<td>5</td>
 		</tr>
 		<tr>
-			<td>Franchise/Locally Owned/Independent</td>
+			<td>Type of Service</td>
 			<td>Locally Owned</td>
 		</tr>
 		<tr>
@@ -145,4 +400,5 @@
 </table>
 </div>
 
+<!-- Begin What Is Included -->
 
